# crewai-production-ready-template

./: .env.template  .gitignore  Dockerfile  README.md  crew.py  docker-compose.yml  main.py  pyproject.toml  start.sh  supervisord.conf
agents/: research_agent.py  writing_agent.py
config/: settings.py
src/agents/: conversation_agent.py  document_management_agent.py  feedback_agent.py  master_agent.py  rag_query_agent.py  research_agent.py  weather_agent.py  writing_agent.py
src/auth/: __init__.py  permissions.py  role_manager.py
src/config/: settings.py
src/crew/: base_crew.py  master_crew.py  research_writing_crew.py
src/rag/document/: cache.py  chunker.py  processor.py
src/rag/embedding/: base.py  openai.py  sentence_transformers.py  service.py
src/rag/loaders/: base.py  file.py  slack.py  web.py
src/rag/query/: engine.py  enhancer.py  processor.py
src/rag/vector_db/: base.py  chroma_db.py  manager.py  pinecone_db.py
src/slack/: app.py  message_handler.py
src/storage/: approval_store.py  redis_client.py
src/tasks/: feedback_task.py  research_task.py  writing_task.py
src/tools/: document_ingestion_tool.py  document_management_tool.py  feedback_tool.py  intent_analyzer.py  rag_query_tool.py  research_tool.py  weather_tool.py
src/utils/: formatting.py  logging.py
tasks/: research_task.py  writing_task.py
tests/: test_agents.py  test_rag.py  test_rbac.py  test_slack.py
