[project]
name = "crewai-slack-bot"
version = "0.1.0"
description = "A production-ready Slack bot powered by CrewAI"
requires-python = ">=3.12"
dependencies = [
    "crewai==0.102.0",
    "slack-bolt==1.22.0",
    "python-dotenv==1.0.1",
    "openai==1.63.2",
    "anthropic==0.34.1",
    "structlog==24.4.0",
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "redis[hiredis]==5.0.1",
    "msgpack==1.0.7"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:litellm.utils",
]
